experiment.log
[36m[INFO][0m Training DRL model -> models/improved_wass_drl.pth (episodes=1200)
  File "/data/workspace/traespace/wass/scripts/improved_drl_trainer.py", line 999
    critical_progress = 1.0 - (len(critical_tasks) / (total_critical_tasks or 1.0)))
                                                                                   ^
SyntaxError: unmatched ')'
[31m[ERR
][0m Training failed
